--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    border: 1px solid rgb(179, 179, 179);
+    border: 1px solid rgb(221, 221, 221);
     padding: 15px;
     border-radius: 20px;
-    background-color: rgb(208, 208, 208);
+    background-color: rgb(240, 240, 240);
     box-shadow: 8px 8px 8px rgb(179, 179, 179);
 }
 
@@ -29,4 +29,19 @@
     font-size: 22px;
     color: rgb(83, 83, 83);
     font-weight: 200;
+}
+
+@keyframes MyHandAnimation {
+    10% {
+        transform: scaleY(1.7);
+    }
+}
+
+#hand{
+    animation-name: MyHandAnimation;
+    animation-duration: 0.7s;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-play-state: running;
 }
