--- a/style.css
+++ b/style.css
@@ -5,13 +5,8 @@
     width: "50%";
     margin-top: 100px;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border: 1px solid rgb(221, 221, 221);
-    padding: 15px;
-    border-radius: 20px;
-    background-color: rgb(240, 240, 240);
-    box-shadow: 8px 8px 8px rgb(179, 179, 179);
+    align-items: center;
+    justify-content: center;
 }
 
 /* card header */
@@ -26,7 +21,7 @@
 
 /* card body */
 .cardBody {
-    font-size: 22px;
+    font-size: 18px;
     color: rgb(83, 83, 83);
     font-weight: 200;
 }
